--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <div class="image"><img src="imagens/person.jpg" alt=""></div>
     <h1>Modern <br> Art Gallery</h1>
     <article>As artes da coleção da Modern Art Gallery partiram de uma centelha de inspiração. Essas peças vão te inspirar? Visite-nos e descubra.</article>
-    <div id="btn"><span>Localizacao</span><a href=""><button>&gt;</button></a></div>
+    <div id="btn"><span>Localizacao</span><a href="template/mapa.html"><button>&gt;</button></a></div>
     <main>
         <section>
             <div class="image"><img src="imagens/salao1.jpg" alt=""></div>
             <article>
-                <h2>seu dia na galeria</h2>
+                <h2>Seu dia <br> na Galeria</h2>
                 <p>Passeie por nossas coleções distintas e encontre novos insights sobre nossos artistas. Mergulhe nos detalhes de seu processo criativo.
                 </p>
             </article>
             <div class="image"><img src="imagens/salao2.jpg" alt=""></div>
             <div class="image"><img src="imagens/salao3.jpg" alt=""></div>
             <article>
-                <h2>Venha e Se Encante</h2>
+                <h2>Venha e Se <br> Encante</h2>
                 <p>Estamos felizes em recebê-lo em nossa galeria e ver como nossas coleções o influenciam.
                 </p>
             </article>
@@ -34,9 +34,9 @@
         <h3>Modern Art Gallery</h3>
         <article>localizada perto da Edward King House na 99 king Street, a Galeria de Arte Moderna é gratuita para todos os visitantes</article>
         <section>
-            <a href="#"><img src="../icons/github.png" alt="github"></a>
-            <a href="#"><img src="../icons/instagram.png" alt="instagram"></a>
-            <a href="#"><img src="../icons/linkedin.png" alt="linkedin"></a>
+            <a href="#"><img src="icons/github.png" alt="github"></a>
+            <a href="#"><img src="icons/instagram.png" alt="instagram"></a>
+            <a href="#"><img src="icons/linkedin.png" alt="linkedin"></a>
         </section>
         <p>Site Criado por Robson Cerqueira para fins didático</p>
     </footer>
