--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="image"><img src="imagens/person.jpg" alt=""></div>
     <h1>Modern <br> Art Gallery</h1>
     <article>As artes da coleção da Modern Art Gallery partiram de uma centelha de inspiração. Essas peças vão te inspirar? Visite-nos e descubra.</article>
-    <div id="btn"><span>Localizacao</span><a href="template/mapa.html"><button>&gt;</button></a></div>
+    <div id="btn" style="margin: 20px;"><span>Localizacao</span><a href="template/mapa.html"><button>&gt;</button></a></div>
     <main>
         <section>
             <div class="image"><img src="imagens/salao1.jpg" alt=""></div>
@@ -20,7 +20,7 @@
                 <p>Passeie por nossas coleções distintas e encontre novos insights sobre nossos artistas. Mergulhe nos detalhes de seu processo criativo.
                 </p>
             </article>
-            <div class="image"><img src="imagens/salao2.jpg" alt=""></div>
+            <div class="image" style="margin-bottom: 10px;"><img src="imagens/salao2.jpg" alt=""></div>
             <div class="image"><img src="imagens/salao3.jpg" alt=""></div>
             <article>
                 <h2>Venha e Se <br> Encante</h2>
