--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="image"><img src="imagens/person.jpg" alt=""></div>
+        <div class="image"><img src="imagens/person.jpg" alt=""></div>
     <h1>Modern <br> Art Gallery</h1>
     <article>As artes da coleção da Modern Art Gallery partiram de uma centelha de inspiração. Essas peças vão te inspirar? Visite-nos e descubra.</article>
     <div id="btn" style="margin: 20px;"><span>Localizacao</span><a href="template/mapa.html"><button>&gt;</button></a></div>
@@ -22,9 +22,9 @@
             </article>
             <div class="image" style="margin-bottom: 10px;"><img src="imagens/salao2.jpg" alt=""></div>
             <div class="image"><img src="imagens/salao3.jpg" alt=""></div>
-            <article>
+            <article class="destaque">
                 <h2>Venha e Se <br> Encante</h2>
-                <p>Estamos felizes em recebê-lo em nossa galeria e ver como nossas coleções o influenciam.
+                <p style="width: 285px; padding-top: 20px; margin: auto;">Estamos felizes em recebê-lo em nossa galeria e ver como nossas coleções o influenciam.
                 </p>
             </article>
         </section>
