mobile First terminado
terminou o mobile first proxima etapa ajustes na responsividade

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <section>
             <div class="image"><img src="imagens/salao1.jpg" alt=""></div>
             <article>
-                <h2>Seu dia <br> na Galeria</h2>
+                <h2 style="margin-left: 10px;">Seu dia <br> na Galeria</h2>
                 <p>Passeie por nossas coleções distintas e encontre novos insights sobre nossos artistas. Mergulhe nos detalhes de seu processo criativo.
                 </p>
             </article>
             <div class="image" style="margin-bottom: 10px;"><img src="imagens/salao2.jpg" alt=""></div>
             <div class="image"><img src="imagens/salao3.jpg" alt=""></div>
             <article class="destaque">
-                <h2>Venha e Se <br> Encante</h2>
+                <h2 style="margin-bottom: 25px;">Venha e Se <br> Encante</h2>
                 <p style="width: 285px; padding-top: 20px; margin: auto;">Estamos felizes em recebê-lo em nossa galeria e ver como nossas coleções o influenciam.
                 </p>
             </article>
