--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Home</title>
 </head>
 <body>
+    <header>
         <div class="image"><img src="imagens/person.jpg" alt=""></div>
+    </header>
     <h1>Modern <br> Art Gallery</h1>
     <article>As artes da coleção da Modern Art Gallery partiram de uma centelha de inspiração. Essas peças vão te inspirar? Visite-nos e descubra.</article>
     <div id="btn" style="margin: 20px;"><span>Localizacao</span><a href="template/mapa.html"><button>&gt;</button></a></div>
