--- a/index.html
+++ b/index.html
@@ -13,32 +13,38 @@
     </header>
     <h1>Modern <br> Art Gallery</h1>
     <article>As artes da coleção da Modern Art Gallery partiram de uma centelha de inspiração. Essas peças vão te inspirar? Visite-nos e descubra.</article>
-    <div id="btn" style="margin: 20px;"><span>Localizacao</span><a href="template/mapa.html"><button>&gt;</button></a></div>
+    <div id="btn"><span>Localizacao</span><a href="template/mapa.html"><button>&gt;</button></a></div>
     <main>
-        <section>
+        <section class="section-main" id="flex-reverse">
             <div class="image"><img src="imagens/salao1.jpg" alt=""></div>
             <article>
-                <h2 style="margin-left: 10px;">Seu dia <br> na Galeria</h2>
+                <h2 >Seu dia <br> na Galeria</h2>
                 <p>Passeie por nossas coleções distintas e encontre novos insights sobre nossos artistas. Mergulhe nos detalhes de seu processo criativo.
                 </p>
             </article>
-            <div class="image" style="margin-bottom: 10px;"><img src="imagens/salao2.jpg" alt=""></div>
-            <div class="image"><img src="imagens/salao3.jpg" alt=""></div>
-            <article class="destaque">
-                <h2 style="margin-bottom: 25px;">Venha e Se <br> Encante</h2>
-                <p style="width: 285px; padding-top: 20px; margin: auto;">Estamos felizes em recebê-lo em nossa galeria e ver como nossas coleções o influenciam.
-                </p>
-            </article>
+        </section>
+        <section class="section-main" >
+            <div class="image" id="imageY" style="margin-bottom: 10px;"><img src="imagens/salao2.jpg" alt=""></div>
+            <section id="flex-colunm">
+                <div class="image"><img src="imagens/salao3.jpg" alt=""></div>
+                <article class="destaque">
+                    <h2 style="margin-bottom: 25px;">Venha e Se <br> Encante</h2>
+                    <p style="width: 285px; padding-top: 20px; margin: auto;">Estamos felizes em recebê-lo em nossa galeria e ver como nossas coleções o influenciam.
+                    </p>
+                </article>
+            </section>
         </section>
     </main>
 
     <footer>
         <h3>Modern Art Gallery</h3>
-        <article>localizada perto da Edward King House na 99 king Street, a Galeria de Arte Moderna é gratuita para todos os visitantes</article>
-        <section>
-            <a href="#"><img src="icons/github.png" alt="github"></a>
-            <a href="#"><img src="icons/instagram.png" alt="instagram"></a>
-            <a href="#"><img src="icons/linkedin.png" alt="linkedin"></a>
+        <section id="section-footer">
+            <article>localizada perto da Edward King House na 99 king Street, a Galeria de Arte Moderna é gratuita para todos os visitantes</article>
+            <section>
+                <a href="#"><img src="icons/github.png" alt="github"></a>
+                <a href="#"><img src="icons/instagram.png" alt="instagram"></a>
+                <a href="#"><img src="icons/linkedin.png" alt="linkedin"></a>
+            </section>
         </section>
         <p>Site Criado por Robson Cerqueira para fins didático</p>
     </footer>
